Complete landing page and add favicon

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MCU Cronology</title>
+    <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
-    <h1>MCU Cronology</h1>
+    <main class="landing-container column">
+      <div class="column">
+        <img src="/images/marvel-logo.svg" alt="Marvel brand logo">
+        <p>Cronologia do Universo Cinematográfico da Marvel</p>
+      </div>
+      <div class="row">
+        <button type="button">Filmes</button>
+      </div>
+    </main>
   </body>
 </html>
