--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,8 +8,17 @@
 }
 
 body {
-  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/images/background.png");
+  font-family: "Funnel Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 400;
   line-height: 1;
+  min-height: 100vh;
 }
 
 a {
@@ -20,12 +32,63 @@ ol {
 }
 
 button {
-  background: none;
+  background-color: #f0141e;
+  border-radius: 3px;
   border: none;
+  box-shadow: 2px 2px 2px 0 #0e0e0e50;
+  color: #eeeeee;
   cursor: pointer;
+  font-family: "Roboto", serif;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding: 0.6rem 1rem;
+  transition: all 0.2s;
+}
+
+button:hover {
+  background-color: #960d14;
 }
 
 img {
   height: auto;
   max-width: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.landing-container {
+  justify-content: center;
+  align-items: center;
+  margin: auto 0;
+
+  > div {
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+  }
+
+  img {
+    box-shadow: 2px 2px 3px 0 #0e0e0e60;
+    width: 56.25rem;
+  }
+
+  p {
+    color: #eeeeee;
+    font-size: 2rem;
+    font-weight: 500;
+    letter-spacing: -1px;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px #0e0e0e80;
+    margin: 0.8rem 0;
+  }
 }
