--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-  <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCU Cronology</title>
-    <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/main.css">
-  </head>
-  <body>
-    <main class="landing-container column">
-      <div class="column">
-        <img src="/images/marvel-logo.svg" alt="Marvel brand logo">
-        <p>Cronologia do Universo Cinematográfico da Marvel</p>
-      </div>
-      <div class="row">
-        <button type="button">Filmes</button>
-      </div>
-    </main>
-  </body>
-</html>
+<%- include("partials/head") %>
+  <main class="landing-container column">
+    <div class="column">
+      <img src="/images/marvel-logo.svg" alt="Marvel brand logo">
+      <p>Cronologia do Universo Cinematográfico da Marvel</p>
+    </div>
+    <div class="row">
+      <button type="button">Filmes</button>
+    </div>
+  </main>
+<%- include("partials/footer") %>
