Create navbar header

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,9 @@
       <p>Cronologia do Universo Cinematográfico da Marvel</p>
     </div>
     <div class="row">
-      <button type="button">Filmes</button>
+      <a href="/movies">
+        <button type="button">Filmes</button>
+      </a>
     </div>
   </main>
 <%- include("partials/footer") %>
