--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -29,6 +29,11 @@ ol {
   list-style: none;
 }
 
+img {
+  height: auto;
+  max-width: 100%;
+}
+
 button {
   background-color: #f0141e;
   border-radius: 3px;
@@ -47,11 +52,6 @@ button {
 
 button:hover {
   background-color: #960d14;
-}
-
-img {
-  height: auto;
-  max-width: 100%;
 }
 
 .column {
@@ -88,5 +88,92 @@ img {
     text-transform: uppercase;
     text-shadow: 1px 1px 2px #0e0e0e80;
     margin: 0.8rem 0;
+  }
+}
+
+.movies-main {
+  margin: auto 0;
+
+  .movies-container {
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #202020c0;
+    gap: 1.2rem;
+    height: 40rem;
+    overflow: auto;
+    padding-left: 32rem;
+    width: 100vw;
+    scroll-behavior: smooth;
+
+    &::-webkit-scrollbar {
+      background-color: #202020;
+      height: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #202020;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #d62929;
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 6px #20202080;
+    }
+
+    .movies-card {
+      flex: 0 0 auto;
+      background-color: #202020;
+      border-radius: 5px;
+      box-shadow: 2px 2px 3px 0 #0e0e0e60;
+      color: #eeeeee;
+      text-align: center;
+      height: 34rem;
+      width: 320px;
+      transition: all 0.5s ease;
+
+      .card-image-container {
+        height: 450px;
+        overflow: hidden;
+      }
+
+      img {
+        border-radius: 5px 5px 0 0;
+        transition: transform 0.5s ease;
+      }
+
+      hr {
+        border: 1px solid #f0141e;
+      }
+
+      .card-title {
+        font-size: 1.4rem;
+        margin: 0.8rem 0 0.3rem 0;
+        text-transform: uppercase;
+      }
+
+      .card-date {
+        color: #9c9c9c;
+        font-size: 0.8rem;
+        letter-spacing: 2px;
+      }
+    }
+
+    .movies-card:hover {
+      background-color: #cc131c;
+      color: #eeeeee;
+
+      img {
+        transform: scale(1.05);
+      }
+
+      hr {
+        border: 1px solid #eeeeee;
+      }
+
+      .card-date {
+        color: #eeeeee;
+      }
+    }
   }
 }
