--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,7 @@
       <a href="/movies">
         <button type="button">Filmes</button>
       </a>
+      <button type="button">Séries</button>
     </div>
   </main>
 <%- include("partials/footer") %>
