--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <header class="header-container row">
   <nav class="row">
-    <img src="/images/marvel-logo.svg" alt="Marvel brand logo">
+    <a href="/">
+      <img src="/images/marvel-logo.svg" alt="Marvel brand logo">
+    </a>
     <ul>
       <li><a class="active">Movies</a></li>
       <li><a>Series</a></li>
