Create `"/series"` endpoint

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,7 +8,9 @@
       <a href="/movies">
         <button type="button">Filmes</button>
       </a>
-      <button type="button">Séries</button>
+      <a href="/series">
+        <button type="button">Séries</button>
+      </a>
     </div>
   </main>
 <%- include("partials/footer") %>
