--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,8 +4,8 @@
       <img src="/images/marvel-logo.svg" alt="Marvel brand logo">
     </a>
     <ul>
-      <li><a class="active">Filmes</a></li>
-      <li><a>Séries</a></li>
+      <li><a class="nav-link" href="/movies">Filmes</a></li>
+      <li><a class="nav-link" href="/series">Séries</a></li>
     </ul>
   </nav>
 </header>
