--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -96,11 +96,11 @@ button:hover {
   }
 }
 
-.movies-main {
+.mcu-main {
   margin: auto 0;
   width: auto;
 
-  .movies-container {
+  .mcu-container {
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
@@ -128,7 +128,7 @@ button:hover {
       -webkit-box-shadow: inset 0 0 6px #20202080;
     }
 
-    .movies-card {
+    .mcu-card {
       flex: 0 0 auto;
       background-color: #202020;
       border-radius: 5px;
@@ -166,7 +166,7 @@ button:hover {
       }
     }
 
-    .movies-card:hover {
+    .mcu-card:hover {
       background-color: #cc131c;
       color: #eeeeee;
 
