--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,3 +1,7 @@
-  </body>
-  <script src="/scripts/script.js"></script>
-</html>
+<footer class="row">
+  <p>© <span>2030</span> Tiago Lourinho. Todos os direitos reservados.</p>
+  <a href="https://www.themoviedb.org" target="_blank" rel="noopener noreferrer">
+    <img src="/images/tmdb-logo.svg" alt="The Movie Database brand logo">
+  </a>
+  <p>Feito com Node.js, Express, Axios e EJS.</p>
+</footer>
