Create `"/movies/:id"` endpoint

--- a/src/views/movies.ejs
+++ b/src/views/movies.ejs
@@ -2,16 +2,18 @@
   <%- include("partials/header") %>
   <main class="mcu-main column">
     <section class="mcu-container row">
-      <% movieDb.forEach(({ title, poster_path, release_date }) => { %>
-        <article class="mcu-card column">
-          <div class="card-image-container">
-            <img src="<%= imageBaseUrl %><%= poster_path %>" alt="<%= title %> poster">
-          </div>
-          <hr>
-          <p class="card-title"><%= title %></p>
-          <p class="card-date"><%= dateFormatter(release_date) %></p>
-        </article>
+      <% movieDb.forEach(({ id, title, poster_path, release_date }) => { %>
+        <a href="/movies/<%= id %>">
+          <article class="mcu-card column">
+            <div class="card-image-container">
+              <img src="<%= imageBaseUrl %><%= poster_path %>" alt="<%= title %> poster">
+            </div>
+            <hr>
+            <p class="card-title"><%= title %></p>
+            <p class="card-date"><%= dateFormatter(release_date) %></p>
+          </article>
+        </a>
       <% }) %>
     </section>
   </main>
-<%- include("partials/footer") %>
+<%- include("partials/feet") %>
