--- a/src/views/partials/feet.ejs
+++ b/src/views/partials/feet.ejs
@@ -1,4 +1,5 @@
     <%- include("footer") %>
-    <script src="/scripts/script.js"></script>
+    <script src="/scripts/global.js"></script>
+    <script src="/scripts/background-handler.js"></script>
   </body>
 </html>
