--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -183,4 +183,66 @@ button:hover {
       }
     }
   }
+
+  .mcu-details-container {
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #202020c0;
+    gap: 2.5rem;
+    height: 40rem;
+    padding: 3rem 2rem;
+    width: 100%;
+    scroll-behavior: smooth;
+
+    img {
+      box-shadow: 2px 2px 3px 0 #0e0e0e60;
+      border-radius: 5px;
+      border: 1px solid #7c7c7c90;
+      height: 34rem;
+    }
+
+    p {
+      color: #eeeeee;
+      text-shadow: 2px 2px #202020;
+    }
+
+    .mcu-details {
+      width: 30%;
+    }
+
+    .details-title-container {
+      margin-bottom: 2rem;
+    }
+
+    .details-container {
+      margin-bottom: 1rem;
+    }
+
+    .details-title {
+      font-size: 3.2rem;
+      font-weight: bold;
+    }
+
+    .details-subtitle {
+      font-size: 1.1rem;
+      font-weight: bold;
+      margin-bottom: 0.2rem;
+    }
+
+    .details-italic {
+      font-style: italic;
+    }
+
+    .details-tagline {
+      color: #7c7c7c;
+      font-style: italic;
+      margin: 0.2rem 0;
+    }
+
+    .details-overview {
+      line-height: 1.2;
+      text-align: justify;
+      text-justify: inter-word;
+    }
+  }
 }
