Complete series details page

--- a/src/views/movies-details.ejs
+++ b/src/views/movies-details.ejs
@@ -38,5 +38,8 @@
         </div>
       </article>
     </section>
+    <a href="http://localhost:3000/movies">
+      <button type="button" class="back-btn">Voltar</button>
+    </a>
   </main>
 <%- include("partials/feet") %>
