--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -245,4 +245,30 @@ button:hover {
       text-justify: inter-word;
     }
   }
+
+  a {
+    text-align: center;
+  }
+
+  .back-btn {
+    position: fixed;
+    background-color: #f0141e;
+    border-radius: 15px;
+    border: none;
+    box-shadow: 2px 2px 2px 0 #0e0e0e50;
+    color: #eeeeee;
+    cursor: pointer;
+    font-family: "Roboto", serif;
+    font-size: 1.1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-top: 0.9rem;
+    margin-left: -3.6rem;
+    padding: 0.3rem 1.2rem;
+    transition: all 0.2s;
+  }
+
+  .back-btn:hover {
+    background-color: #960d14;
+  }
 }
