--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,5 +3,5 @@
   <a href="https://www.themoviedb.org" target="_blank" rel="noopener noreferrer">
     <img src="/images/tmdb-logo.svg" alt="The Movie Database brand logo">
   </a>
-  <p>Feito com Node.js, Express, Axios e EJS.</p>
+  <p>Feito com Node.js, Express, EJS, Axios e TMDB.</p>
 </footer>
